fixed hljs overflow in markdown

--- a/public/style/components/markdownRendered.css
+++ b/public/style/components/markdownRendered.css
@@ -31,6 +31,8 @@
 .markdown-rendered pre code
 {
     padding: 0.5rem;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .markdown-rendered p
